Fixed top gap caused by hidded evironment banner. Added 1 sec wait before hiding loading screen to allow time for app to load

--- a/src/global.scss
+++ b/src/global.scss
@@ -1102,6 +1102,10 @@ label.fileInputLabel {
   user-select: text;
 }
 
+.top-banner{
+  top: 30px;
+}
+
 [app-viewport],
 [overlay-portal],
 [nav-viewport],
